--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,14 @@
-<header>
-<a id="go-back-home" href="/"><img src="/images/scribble.png" alt="scribble" width="53" height="59"></a>
-<p>{{ site.title }}</p>
-</header>
+<div class="top-nav-wrap">
+    <div class="container">
+        {% include links.html %}
+    </div>
+</div>
+
+<div class="banner">
+    <div class="container">
+        <h3>
+            <a href="/">Catlog</a>
+        </h3>
+        <p>a web developer</p>
+    </div>
+</div>
