--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -88,33 +88,31 @@ footer {
   footer * {
     color: #797979; }
 
-#container {
+.container {
   *zoom: 1;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   max-width: 600px;
-  background: #fff;
   margin: 40px auto 20px;
   border-radius: 7px;
-  border: 1px solid #eee;
   position: relative; }
-  #container:before, #container:after {
+  .container:before, .container:after {
     content: " ";
     display: table; }
-  #container:after {
+  .container:after {
     clear: both; }
-  #container .block {
+  .container .block {
     border-top: 1px solid #efefef;
     border-bottom: 1px solid #efefef;
     padding: 30px 40px 24px;
     text-align: center; }
-    #container .block:first-child, #container .block + .block {
+    .container .block:first-child, .container .block + .block {
       border-top: 0; }
-    #container .block:last-child {
+    .container .block:last-child {
       border-bottom: 0; }
-    #container .block a.main {
+    .container .block a.main {
       display: inline-block;
       vertical-align: baseline;
       zoom: 1;
@@ -123,9 +121,9 @@ footer {
       padding: 2px 2px;
       margin-right: 12px;
       margin-bottom: 6px; }
-      #container .block a.main:last-of-type {
+      .container .block a.main:last-of-type {
         margin-right: 0; }
-    #container .block .button {
+    .container .block .button {
       display: inline-block;
       vertical-align: baseline;
       zoom: 1;
