--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     {% include header.html %}
-    <div id='container'>
-      {% include links.html %}
+    <div class='container main'>
+
       <div class="content">
         {{ content }}
       </div>
