--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div id='container'>
-      {% include links.html %}
+    <div class='container main'>
       {% include pages.html %}
       <div class="content">
         <section class='post'>
@@ -28,7 +27,6 @@
       {% if page.disqus == 'y' %}
         {% include disqus.html %}
       {% endif %}
-      {% include links.html %}
     </div>
     {% include footer.html %}
   </body>
