--- a/_assets/app.scss
+++ b/_assets/app.scss
@@ -61,6 +61,10 @@
 }
 
 section.post {
+  code {
+    background: #e6e6e6;
+    color: #000;
+  }
   .highlight {
     padding: 0;
     margin: 0 60px;
@@ -68,6 +72,10 @@ section.post {
     pre {
       padding: 1em;
       border-radius: 4px;
+    }
+    code {
+      background: transparent;
+      color: #eee;
     }
   }
 }
