--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -41,6 +41,9 @@
 .paging .right {
   margin-left: 404px; }
 
+section.post code {
+  background: #e6e6e6;
+  color: #000; }
 section.post .highlight {
   padding: 0;
   margin: 0 60px;
@@ -48,6 +51,9 @@ section.post .highlight {
   section.post .highlight pre {
     padding: 1em;
     border-radius: 4px; }
+  section.post .highlight code {
+    background: transparent;
+    color: #eee; }
 
 .container {
   max-width: 768px; }
