--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -41,9 +41,18 @@
 .paging .right {
   margin-left: 404px; }
 
+section.post h2, section.post h3 {
+  font-weight: bolder;
+  padding: 0;
+  margin: 25px 0 25px 60px;
+  border-bottom: solid 1px #dedede; }
+section.post h4 {
+  font-weight: bold; }
 section.post code {
   background: #e6e6e6;
   color: #000; }
+section.post ul, section.post ol {
+  margin-left: 60px; }
 section.post .highlight {
   padding: 0;
   margin: 0 60px;
