--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div class='container main'>
+    <div class='container main' id="main-content">
 
       <div class="content">
         {{ content }}
