--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,16 +6,15 @@
 <link href='/stylesheets/app.css' rel='stylesheet' type='text/css' />
 <!-- - -->
 <script src='/javascripts/jquery.js' type='text/javascript'></script>
+<script src='/javascripts/jquery.smoothState.js' type='text/javascript'></script>
 <script src='/javascripts/pd.js' type='text/javascript'></script>
 <script src='/javascripts/basics.js' type='text/javascript'></script>
 <!-- - -->
 <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 <meta content='text/html; charset=utf-8' http-equiv='content-type' />
-<meta content="http://muan.co/images/og.png" property="og:image" />
-<meta content="{{ site.facebook_appid }}" property="fb:app_id" />
+
 {% if page.date %}
   <meta content='{{ site.url }}{{ page.url }}' property='og:url' />
-  <meta content="{{ page.content | strip_html | strip_newlines | truncate: 120 }}" property='og:description' />
   <meta content="article" property="og:type" />
 {% else %}
   <meta content='{{ site.url }}' property='og:url' />
