--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div class='container main'>
+    <div class='container main' id="main-content">
       <div class="content">
           <section class='post'>
             <h1>{{ page.title }}</h1>
