--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div class='container main'>
+    <div class='container main' id="main-content">
       {% include pages.html %}
       <div class="content">
         <section class='post'>
