--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -70,6 +70,9 @@ section.post .highlight {
     background: #fff;
     border: 1px solid #eee; }
 
+#main-content {
+  min-height: 300px; }
+
 @media (max-width: 480px) {
   body {
     padding: 0; } }
